crates/libretto-cli/tests/snapshots/snapshot_tests__require_help.snap
---
source: crates/libretto-cli/tests/snapshot_tests.rs
description: Require command help
---
Adds required packages to your composer.json and installs them

Usage: libretto require [OPTIONS] <PACKAGE>...

Arguments:
  <PACKAGE>...
          Packages to require (name or name:version)

Options:
  -D, --dev
          Add as dev dependency

  -q, --quiet
          Do not output any message

      --ansi
          Force ANSI output (colors and formatting)

      --no-update
          Don't update dependencies after adding

      --dry-run
          Dry run

      --no-ansi
          Disable ANSI output (colors and formatting)

  -n, --no-interaction
          Do not ask any interactive question

      --prefer-stable
          Prefer stable versions

      --profile
          Display timing and memory usage information

      --sort-packages
          Sort packages alphabetically

      --no-plugins
          Disables all plugins

      --no-scripts
          Skips execution of scripts defined in composer.json

  -d, --working-dir <DIR>
          Use the specified directory as working directory

      --no-cache
          Prevent use of the cache

      --format <FORMAT>
          Output format (text, json, or table)

          Possible values:
          - table: Human-readable table format
          - json:  JSON format
          - text:  Plain text format
          
          [default: text]

  -v, --verbose...
          Increase the verbosity of messages: -v for verbose, -vv for very verbose, -vvv for debug

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
