crates/libretto-cli/tests/snapshots/snapshot_tests__search_help.snap
---
source: crates/libretto-cli/tests/snapshot_tests.rs
description: Search command help
---
Searches for packages

Usage: libretto search [OPTIONS] <QUERY>

Arguments:
  <QUERY>  Search query

Options:
  -N, --only-name            Only show package names
  -q, --quiet                Do not output any message
      --ansi                 Force ANSI output (colors and formatting)
  -t, --type <PACKAGE_TYPE>  Filter by package type (library, project, etc.)
  -f, --format <FORMAT>      Output format (text, json) [default: text]
      --no-ansi              Disable ANSI output (colors and formatting)
  -n, --no-interaction       Do not ask any interactive question
      --profile              Display timing and memory usage information
      --no-plugins           Disables all plugins
      --no-scripts           Skips execution of scripts defined in composer.json
  -d, --working-dir <DIR>    Use the specified directory as working directory
      --no-cache             Prevent use of the cache
  -v, --verbose...           Increase the verbosity of messages: -v for verbose, -vv for very
                             verbose, -vvv for debug
  -h, --help                 Print help
  -V, --version              Print version
