crates/libretto-cli/tests/snapshots/snapshot_tests__show_empty.snap
---
source: crates/libretto-cli/tests/snapshot_tests.rs
description: Show command with no packages
---
Libretto Installed packages
