crates/libretto-cli/tests/snapshots/snapshot_tests__update_help.snap
---
source: crates/libretto-cli/tests/snapshot_tests.rs
description: Update command help
---
Updates your dependencies to the latest version according to composer.json, and updates the
composer.lock file

Usage: libretto update [OPTIONS] [PACKAGE]...

Arguments:
  [PACKAGE]...
          Packages to update (all if empty)

Options:
      --no-dev
          Skip dev dependencies

  -q, --quiet
          Do not output any message

      --ansi
          Force ANSI output (colors and formatting)

      --prefer-lowest
          Prefer lowest versions

      --no-ansi
          Disable ANSI output (colors and formatting)

      --prefer-stable
          Prefer stable versions

      --dry-run
          Dry run (don't update anything)

  -n, --no-interaction
          Do not ask any interactive question

      --profile
          Display timing and memory usage information

      --root-reqs
          Only update root dependencies

      --lock
          Lock file only (don't install)

      --no-plugins
          Disables all plugins

      --audit
          Run security audit after update

      --no-scripts
          Skips execution of scripts defined in composer.json

  -d, --working-dir <DIR>
          Use the specified directory as working directory

      --fail-on-audit
          Fail update if security vulnerabilities are found

      --no-cache
          Prevent use of the cache

      --format <FORMAT>
          Output format (text, json, or table)

          Possible values:
          - table: Human-readable table format
          - json:  JSON format
          - text:  Plain text format
          
          [default: text]

  -v, --verbose...
          Increase the verbosity of messages: -v for verbose, -vv for very verbose, -vvv for debug

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
