crates/libretto-cli/tests/snapshots/snapshot_tests__validate_valid.snap
---
source: crates/libretto-cli/tests/snapshot_tests.rs
description: Validate command with valid composer.json
---
Libretto Validating composer.json...

Success: composer.json is valid
